fix broken styles in Bookings view

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -114,19 +114,6 @@ h1 {
   color: var(--clr-dark-blue);
 }
 
-.field {
-  display: flex;
-  width: 100%;
-}
-
-.field label {
-  width: 4rem;
-}
-
-.field input {
-  flex-grow: 1;
-}
-
 .primary-btn {
   padding: 0.5rem 1.25rem;
   font-weight: 800;
